UI update + OO Audio

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
 
 		<a id="play"></a>
-		<a id="metronome" href=""></a>
+		<a id="metronome"></a>
 
 		<div id="header-buttons">
 			<a href="#" class="header-button">Download</a>
