--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 			<input id="tempo-slider" type="range" min="60" max="180" value="120" />
 		</div>
 
-		<a id="play"></a>
-		<a id="metronome"></a>
+		<a id="play" href="#"></a>
 
-		<div id="header-buttons">
+		<a id="metronome" href="#"></a>
+
+		<div id="recording-buttons" class="cf">
+			<a id="rec" href="#"></a>
 			<a href="#" class="header-button">Download</a>
 			<a href="#" class="header-button sc">Share to Soundcloud</a>
 		</div>
