--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
        		</linearGradient>
 	    </defs>
 	</svg>
-	<script src="js/lib/jquery-1.8.2.min.js"></script>
-	<script src="js/lib/recorderjs/recorder.js"></script>
+	<script src="./js/lib/jquery-1.8.2.min.js"></script>
+	<script src="./js/lib/recorderjs/recorder.js"></script>
 	<script src="http://cwilso.github.io/AudioContext-MonkeyPatch/AudioContextMonkeyPatch.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 </body>
