Tried to implement crossbrowserness...

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 		<section class="track-wrapper">
 			<section id="track1" class="track t1 empty">
 				<svg class="track-svg">
+					<rect width="100%" height="100%" stroke="none" visibility="hidden" pointer-events="none" />
 					<circle class="track-svg-circle track-svg-bg"></circle>
-
 					<g class="track-svg-rec">
 						<circle class="track-svg-rec-bg-start"></circle>
 						<circle class="track-svg-circle track-svg-rec-bg"></circle>
