Added tempo tap - click on the tempo five times to change it to the tempo that you tap at!

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 
 		<div id="tempo" class="cf">
 			<div id="tempo-label">
-				Tempo:
-				<span id="tempo-value">120</span>
+				<div id="tempo-holder">
+					<button id="tempo-click">
+					Tempo:
+					<span id="tempo-value">120</span>
+					</button>
+				</div>
 			</div>
 			<input id="tempo-slider" type="range" min="60" max="180" value="120" />
 		</div>
