--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html5>
 <html>
 <head>
-	<title>sup</title>
+	<title>bleepaloop</title>
 	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="./css/jquery.prompt.css">
 </head>
 <body>
 	<header id="header">
@@ -84,7 +85,7 @@
 
 		<!-- Track 2 -->
 		<section class="track-wrapper">
-			<section id="track2" class="track t2 empty">
+			<section id="track2" class="track t2 empty faded">
 				<svg class="track-svg">
 					<circle class="track-svg-circle track-svg-bg"></circle>
 
@@ -132,7 +133,7 @@
 
 		<!-- Track 3 -->
 		<section class="track-wrapper">
-			<section id="track3" class="track t3 empty">
+			<section id="track3" class="track t3 empty faded">
 				<svg class="track-svg">
 					<circle class="track-svg-circle track-svg-bg"></circle>
 
@@ -180,7 +181,7 @@
 
 		<!-- Track 4 -->
 		<section class="track-wrapper">
-			<section id="track4" class="track t4 empty">
+			<section id="track4" class="track t4 empty faded">
 				<svg class="track-svg">
 					<circle class="track-svg-circle track-svg-bg"></circle>
 
@@ -239,6 +240,7 @@
 	<script src="./js/lib/jquery-1.8.2.min.js"></script>
 	<script src="./js/lib/recorderjs/recorder.js"></script>
 	<script src="http://cwilso.github.io/AudioContext-MonkeyPatch/AudioContextMonkeyPatch.js"></script>
+	<script src="./js/jquery.prompt.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
