Added help popups, yay!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/jquery.prompt.css">
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/jquery.qtip.min.css">
 </head>
 <body>
 	<header id="header">
@@ -30,7 +31,7 @@
 			<div id="recording-buttons" class="cf">
 			<a id="rec" href="#"></a>
 			<a id="download" href="#" class="header-button">Download</a>
-			<a id="share" href="#" class="header-button sc">Share to Soundcloud</a>
+			<a id="help" href="#" class="header-button">Help!</a>
 		</div>
 	</header>
 
@@ -242,5 +243,6 @@
 	<script src="http://cwilso.github.io/AudioContext-MonkeyPatch/AudioContextMonkeyPatch.js"></script>
 	<script src="./js/jquery.prompt.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/jquery.qtip.min.js"></script>
 </body>
 </html>
